--- a/flask_app/templates/new_ninja.html
+++ b/flask_app/templates/new_ninja.html
@@ -5,8 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Ninja</title>
+    <style>
+        * {
+            font-size: 25px;
+            margin: 0;
+            padding: 0;
+            color: rgb(228, 228, 228);
+            background-color: black;
+        }
+
+        body {
+            background-image: url("https://wallpaperaccess.com/full/2981115.jpg");
+            background-size: cover;
+            background-color: black;
+            height: 900px;
+        }
+        
+        form {
+            margin: 0 auto;
+            width: 300px;
+            margin-top: 60px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            padding: 30px;
+            border: 2px solid rgb(228, 228, 228);
+            box-shadow: 1px 5px 20px 10px rgb(228, 228, 228);
+        }
+
+        form select {
+            width: 275px;
+            padding: 5px;
+        }
+
+        .submit-ninja {
+            margin-top: 10px;
+            padding: 5px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 100px;
+            font-size: 35px;
+        }
+    </style>
 </head>
 <body>
-    <form action="/ninjas" method="post"></form>
+        <h1>Become a Ninja Today</h1>
+        <form action="/ninjas" method="post">
+            <select name="dojo_id">
+                {% for dojo in dojos_ninjas %}
+                    <option value= {{dojo.id}} selected>{{ dojo.name }}</option>
+                {% endfor %}
+            </select>
+            <label for="first_name">Name:</label>
+            <input type="text" name="first_name">
+            <label for="last_name">Last Name:</label>
+            <input type="text" name="last_name">
+            <label for="age">Age:</label>
+            <input type="text" name="age">
+            <input class="submit-ninja" type="submit" value="Create">
+        </form>
 </body>
 </html>
