--- a/flask_app/templates/show_dojo.html
+++ b/flask_app/templates/show_dojo.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dojo Show</title>
+    <style>
+        .dojo-students table, th, td {
+        font-size: 20px;
+        padding: 10px;
+        border-top: 2px solid rgb(228, 228, 228);
+        border-collapse: collapse;
+    }
+    </style>
 </head>
 <body>
-    <h1>{{ dojo_ninjas.name }}'s Ninjas</h1>
-    <table>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-        </tr>
-        {% for ninjas in dojo_ninjas.ninjas %}
-        <tr>
-            <td>{{ ninjas.first_name }}</td>
-            <td>{{ ninjas.last_name }}</td>
-            <td>{{ ninjas.age }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-        
+    <a class="home-link" href="/">Home</a>
+    <div class="dojo-students">
+        <h1>{{ dojo_ninjas.name }}'s Ninjas</h1>
+        <table>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Age</th>
+            </tr>
+            {% for ninjas in dojo_ninjas.ninjas %}
+            <tr>
+                <td>{{ ninjas.first_name }}</td>
+                <td>{{ ninjas.last_name }}</td>
+                <td>{{ ninjas.age }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </body>
 </html>
